Красота кода. Убраны неиспользуемые библиотеки, убраны неиспользуемые импорты

--- a/client/src/styles/tasks.css
+++ b/client/src/styles/tasks.css
@@ -6,8 +6,8 @@
     font-size: 12px;
     gap: 3px;
 }
-.animateCharcter
-{
+
+.animateCharcter {
 
     background-image: linear-gradient(
             -225deg,
